--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^3.6.95",
     "core-js": "^2.6.5",
+    "roboto-fontface": "*",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vuetify": "^2.2.11",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -25,6 +28,7 @@
     "prettier": "^1.18.2",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuetify": "^2.0.7",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
